--- a/index.html
+++ b/index.html
@@ -73,14 +73,36 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="connecting-github-to-rstudio-for-reproducible-research">Connecting GitHub to RStudio for Reproducible Research</h2>
 <p><strong>Note:</strong> Brown Bag attendees will learn more from my presentation if they 1) bring their laptop or follow along on Zoom, 2) have <a href="https://posit.co/download/rstudio-desktop/">RStudio</a> loaded already to their machine, and 3) make sure that Git is either installed on your machine and the path to the Git executable is added to your system’s PATH environment variable.</p>
 <blockquote class="blockquote">
+<div class="callout callout-style-default callout-important callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Important
+</div>
+</div>
+<div class="callout-body-container callout-body">
 <p><strong>OBJECTIVES:</strong></p>
 <ol type="1">
 <li><p>Participants will understand that revision control supports reproducible and replaceable research</p></li>
 <li><p>Participants will become familiar with a RStudio &lt;-&gt; GitHub workflow for revision control</p></li>
 <li><p>(if time) Participants will participate in a code conflict resolution exercise</p></li>
 </ol>
+</div>
+</div>
 </blockquote>
 <blockquote class="blockquote">
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Note
+</div>
+</div>
+<div class="callout-body-container callout-body">
 <p><strong>Subnote on YAML:</strong></p>
 <p>YAML Is the document’s metadata which sets guidelines on how your want the output of your document to look like. It is located at the top of your file, delineated by three dashes (<code>---</code>) at the top and at the bottom of it. It can be used to specify:</p>
 <ul>
@@ -89,6 +111,8 @@ ul.task-list li input[type="checkbox"] {
 <li><p>Add additional information such as the bibliography file (and formatting of the references)</p></li>
 <li><p>Specific parameters for your report (eg: just used a subset of the data).</p></li>
 </ul>
+</div>
+</div>
 </blockquote>
 <hr>
 <blockquote class="blockquote">
@@ -176,11 +200,22 @@ ul.task-list li input[type="checkbox"] {
 <h1>NOW Let’s dive into Git and GitHub:</h1>
 <hr>
 <blockquote class="blockquote">
-<h2 id="check-if-git-is-installed" class="anchored" data-anchor-id="now-lets-dive-into-git-and-github">Check if Git is Installed</h2>
+<div class="callout callout-style-default callout-caution callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Check if Git is Installed
+</div>
+</div>
+<div class="callout-body-container callout-body">
 <p>First, ensure that Git is indeed installed on your computer. You can do this by trying to run <code>git --version</code> in your terminal or command prompt. If Git is installed, this command will return the version of Git you have installed.</p>
-<h2 id="install-git" class="anchored">Install Git</h2>
+<h2 id="install-git" class="anchored" data-anchor-id="now-lets-dive-into-git-and-github">Install Git</h2>
 <p>If Git is not installed, you’ll need to download and install it. You can download Git from <a href="https://git-scm.com">git-scm.com</a>. During the installation process, there is an option to add Git to your PATH. Make sure this option is selected.</p>
 <p>Are you getting any errors? <a href="240410_brown_bag.html">Setting the Path to Git Manually</a></p>
+</div>
+</div>
 </blockquote>
 <hr>
 <section id="what-exactly-are-git-and-github" class="level3">
@@ -269,10 +304,10 @@ What should I write in my commit message?</strong></p>
 <section id="configuring-git" class="level2">
 <h2 class="anchored" data-anchor-id="configuring-git">Configuring Git</h2>
 <p>Let’s start by adding your user name to the global options. Type the following into the command prompt, with your exact GitHub username, and press enter:</p>
-<p><code>{r} ## git config --global user.name "my_user_name"}</code></p>
+<pre><code>git config --global user.name "my_user_name"}</code></pre>
 <p>Note that if the code ran successfully, it will look like nothing happened. We will check at the end to make sure it worked.</p>
 <p>Next, enter the following line, with the email address you used when you created your account on <a href="www.github.com">github.com</a>:</p>
-<p><code>{r} ## git config --global user.email "my_email@alaska.edu"}</code></p>
+<pre><code>git config --global user.email "my_email@alaska.edu"</code></pre>
 </section>
 </section>
 <section id="setting-up-git-credentials" class="level1">
@@ -281,11 +316,11 @@ What should I write in my commit message?</strong></p>
 <section id="when-setting-up-git-and-github-on-your-personal-computer" class="level2">
 <h2 class="anchored" data-anchor-id="when-setting-up-git-and-github-on-your-personal-computer">When Setting up Git and GitHub on Your Personal Computer</h2>
 <p>You will not need to run the <code>git config</code> line below to set the cache. This is a specific configuration for the RStudio Server we are working on.</p>
-<p><code>{r} ## git config --global credential.helper 'cache --timeout=10000000'}</code></p>
+<pre><code>git config --global credential.helper 'cache --timeout=10000000'}</code></pre>
 <p>Next, we will set the default branch name to <code>main</code> for any new repositories that are created moving forward. Why are we doing this? Previously, the default branch name was <code>master</code> and this racist terminology for Git branches motivates us to update our default branch to <code>main</code> instead.</p>
-<p><code>{r} ## git config --global init.defaultBranch main}</code></p>
+<pre><code>git config --global init.defaultBranch main}</code></pre>
 <p>Finally, check to make sure everything looks correct by entering this command, which will return the global options you have set.</p>
-<p><code>{r} ## git config --global --list}</code></p>
+<pre><code>git config --global --list</code></pre>
 </section>
 <section id="github-authentication" class="level2">
 <h2 class="anchored" data-anchor-id="github-authentication">2.2.2 GitHub Authentication</h2>
@@ -307,10 +342,22 @@ What should I write in my commit message?</strong></p>
 <p><strong>Note:</strong> For better security and long term use, we recommend taking the extra steps to set up SSH keys (check out Chapter 10 Set up Keys for SSH in the book <em>Happy Git and GitHub for the useR</em>).</p>
 </blockquote>
 <blockquote class="blockquote">
+<div class="callout callout-style-default callout-warning callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Warning
+</div>
+</div>
+<div class="callout-body-container callout-body">
 <p><strong>Git configuration to surpress warning messages</strong></p>
 <p>Git version 2.27 includes a new feature that allows users to specify the default method for integrating changes from a remote repository into a local repository, without receiving a warning (this warning is informative, but can get annoying). To suppress this warning <em>for this repository only</em> we need to configure Git by running this line of code in the Terminal:</p>
 <pre><code>git config pull.rebase false</code></pre>
 <p><code>pull.rebase false</code> is a default strategy for pulling where Git will first try to auto-merge the files. If auto-merging is not possible, it will indicate a merge conflict.</p>
+</div>
+</div>
 </blockquote>
 <hr>
 </section>
@@ -335,8 +382,20 @@ What should I write in my commit message?</strong></p>
 <h1><strong><code>clone</code> your repository and use Git locally in RStudio</strong></h1>
 <p>Let’s bring a copy of this remote repository down to our local computer (aka&nbsp;<strong>clone</strong>&nbsp;this repository) so that we can work comfortably in RStudio.</p>
 <blockquote class="blockquote">
+<div class="callout callout-style-default callout-tip callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Tip
+</div>
+</div>
+<div class="callout-body-container callout-body">
 <p><strong>An important distinction</strong></p>
 <p>We refer to the <strong>remote copy</strong> of the repository that is on GitHub as the <strong>origin repository</strong> (the one that we cloned from), and the copy on our local computer as the <strong>local repository</strong>.</p>
+</div>
+</div>
 </blockquote>
 <p>Start by clicking the green <strong>Code</strong> button (top right of your file listing) and copying the URL to your clipboard (this URL represents the repository location):</p>
 <p><img src="240410_brown_bag_files/github-test-clone-url.png" class="img-fluid" width="646"></p>
@@ -362,11 +421,23 @@ What should I write in my commit message?</strong></p>
 <pre><code># added by default when I initalized my RProj as a Git Repository .Rproj.user .Rhistory .Rdata .httr-oauth .DS_Store .quarto  # add file so that it doesn't get pushed to the remote repo (on GitHub);  contains_sensitive_info.R</code></pre>
 <p>If this file is currently untracked by Git, it should appear in my <strong>Git</strong> tab. Once I add it to the <code>.gitignore</code> <em>and</em> save the modified <code>.gitignore</code> file, you should see <code>contains_sensitive_info.R</code> disappear from the <strong>Git</strong> tab, and a modified <code>.gitignore</code> (denoted by a blue <strong>M</strong>) appear. Stage/commit/push this modified <code>.gitignore</code> file.</p>
 </blockquote>
+<div class="callout callout-style-default callout-tip callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Tip
+</div>
+</div>
+<div class="callout-body-container callout-body">
 <p><strong>Why do I need to add and commit files <em>before</em> pulling?</strong></p>
 <blockquote class="blockquote">
 <p>Remember, <code>git pull</code> is a combination of <code>git fetch</code>ing remote changes to your local repo and <code>git merge</code>ing those changes from your local repo into your local working file(s).</p>
 <p>The <strong>merge</strong> part of <code>git pull</code> will fail if you have uncommitted changes in your local working file(s) to avoid any potential overwriting of your own changes. Because of this, you should always, add/commit <em>then</em> pull, <em>and finally</em> push.</p>
 </blockquote>
+</div>
+</div>
 <section id="a-note-on-advanced-collaboration-techniques" class="level2">
 <h2 class="anchored" data-anchor-id="a-note-on-advanced-collaboration-techniques"><strong>A Note on Advanced Collaboration Techniques</strong></h2>
 <p>There are many Git and GitHub collaboration techniques, some more advanced than others. We won’t be covering advanced strategies in this course. But here is a table for your reference on a few popular Git collaboration workflow strategies and tools.</p>
@@ -582,7 +653,19 @@ When working on projects with a small team or single developer with direct write
 <h1><strong>Reproducible Papers with <code>rrtools</code></strong></h1>
 <p>A great overview of this approach to reproducible papers comes from:</p>
 <blockquote class="blockquote">
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Note
+</div>
+</div>
+<div class="callout-body-container callout-body">
 <p>Ben Marwick, Carl Boettiger &amp; Lincoln Mullen (2018) <strong>Packaging Data Analytical Work Reproducibly Using R (and Friends)</strong>, The American Statistician, 72:1, 80-88, <a href="https://doi.org/10.1080/00031305.2017.1375986">doi:10.1080/00031305.2017.1375986</a></p>
+</div>
+</div>
 </blockquote>
 <p>The key idea in Marwick et al.&nbsp;(2018) is that of the <em>research compendium</em>: A single container for not just the journal article associated with your research but also the underlying analysis, data, and even the required software environment required to reproduce your work.</p>
 <p>Research compendium makes it easy for researchers to do their work but also for others to inspect or even reproduce the work because all necessary materials are readily at hand due to being kept in one place. Rather than a constrained set of rules, the research compendium is a scaffold upon which to conduct reproducible research using open science tools such as:</p>
@@ -606,11 +689,23 @@ When working on projects with a small team or single developer with direct write
 <section id="workflow-in-a-nutshell" class="level3">
 <h3 class="anchored" data-anchor-id="workflow-in-a-nutshell"><strong>Workflow in a nutshell</strong></h3>
 <blockquote class="blockquote">
+<div class="callout callout-style-default callout-tip callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Tip
+</div>
+</div>
+<div class="callout-body-container callout-body">
 <p><strong>Summary</strong></p>
 <ul>
 <li><p>Use <code>rrtools</code> to generate the core directory layout and approach to data handling.</p></li>
 <li><p>Then use <code>rticles</code> to create the structure of the paper itself. The combination is incredibly flexible.</p></li>
 </ul>
+</div>
+</div>
 </blockquote>
 <p>Things we can do with our research compendium:</p>
 <ul>
